CPG-DEV/src/objects/ProjectTeamMembers__c.object
<CustomObject>
    <fields>
        <fullName>LegacyRecordID__c</fullName>
        <label>Legacy Record ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Project Team Members</relationshipLabel>
        <relationshipName>Project_Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Project Team Members</relationshipLabel>
        <relationshipName>Project_Team_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>TechLead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TechResource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CommercialLead</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>isCurrentUser__c</fullName>
        <formula>IF(Member__c=$User.Id,1,0)</formula>
        <label>isCurrentUser</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Project Team Members</label>
    <nameField>
        <displayFormat>ProjTeam{000000}</displayFormat>
        <label>Project Team Members Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>